Particle kinematics "track curves" + fixes to images not showing in cbtf mode in DYnamics

--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -177,15 +177,15 @@ From observation:
             <p>
                 In general, the maximum shear stress is given by 
                 
-                <DisplayEquation equation="\\phi = \\frac{TL}{GJ}\\" background="True"/>
+                <DisplayEquation equation="\\phi = \\frac{TL}{GJ}\\"/>
 
                 For thin-walled shafts 
                 
-                <DisplayEquation equation="\\tau_{max} = \\frac{T}{2tA_m}\\" background="True"/>
+                <DisplayEquation equation="\\tau_{max} = \\frac{T}{2tA_m}\\"/>
 
                 where 
                 
-                <DisplayEquation equation="\\begin{align} A_m &= \\pi R_{ave}^2 \\\\ R_{ave} &= \\frac{R_o + R_i}{2} \\end{align}" background="True"/>
+                <DisplayEquation equation="\\begin{align} A_m &= \\pi R_{ave}^2 \\\\ R_{ave} &= \\frac{R_o + R_i}{2} \\end{align}"/>
 
                 Note that is NOT the cross sectional area of the hollow shaft!
             </p>
@@ -224,7 +224,7 @@ From observation:
             <strong> Power transmition </strong> can be used to find shear stress in gear shafts.
             </p>
             <p>
-                <DisplayEquation equation="\\tau = \\frac{P c}{\\omega J}\\" title="Maximum shear stress" background="True" />
+                <DisplayEquation equation="\\tau = \\frac{P c}{\\omega J}\\" title="Maximum shear stress:"/>
             </p>
     </CalloutCard>
 </CalloutContainer>
