--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -29,13 +29,15 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 It can be helpful at times to reduce the forces on a body and combine resultant moments and simplify the analysis. 
 
-Note: These forces and moments will have the same \textbf{external} effect on the body, but the internal forces on the rigid body may be different. 
+Note: These forces and moments will have the same <strong>external</strong> effect on the body, but the internal forces on the rigid body may be different. 
 
 For example, the four systems below are statically equivalent, which means that the sum of external forces and sum of extrenal moments are the same for both systems.
 
-<Image src='/Statics/ForceSystemsFigures/EquivSystems.PNG' width='5 '> All four of these systems are statically equivalent. </Image>
+<Image src='/Statics/ForceSystemsFigures/EquivSystems.jpg' width='5 '> All four of these systems are statically equivalent. </Image>
 
 It can be helpful to know what are equivalent transformations for both forces and moments. These are described below: 
+
+</SubSection>
 
 <SubSubSection title="Allowable Force Transformations" id="allowable force transformations">
 
@@ -45,6 +47,8 @@ Replacing two forces with their vector sum:
 Moving a force ALONG its line of action: 
 <Image src='/Statics/ForceSystemsFigures/Equivalent_Force_LOA.PNG' width='5 '> </Image>
 
+</SubSubSection>
+
 <SubSubSection title="Allowable Moment Transformations" id="allowable moment transformations">
 
 Replacing a force couple with a couple moment: 
@@ -53,7 +57,7 @@ Replacing a force couple with a couple moment:
 Moving a couple moment to another spot on a rigid body: 
 <Image src='/Statics/ForceSystemsFigures/Equivalent_CoupleMove.PNG' width='5 '> </Image>
 
-</SubSection>
+</SubSubSection>
 
 <SubSection title="Concentrated forces" id="concentrated_forces">
 
