--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -45,17 +45,17 @@ Replacing two forces with their vector sum:
 <Image src='/Statics/ForceSystemsFigures/Equivalent_VectorSum.PNG' width='5 '> </Image>
 
 Moving a force ALONG its line of action: 
-<Image src='/Statics/ForceSystemsFigures/Equivalent_Force_LOA.PNG' width='5 '> </Image>
+<Image src='/Statics/ForceSystemsFigures/Equivalent_Force_LOA.png' width='5 '> </Image>
 
 </SubSubSection>
 
 <SubSubSection title="Allowable Moment Transformations" id="allowable moment transformations">
 
 Replacing a force couple with a couple moment: 
-<Image src='/Statics/ForceSystemsFigures/Equivalent_CoupleReplace.PNG' width='5 '> </Image>
+<Image src='/Statics/ForceSystemsFigures/Equivalent_CoupleReplace.png' width='5 '> </Image>
 
 Moving a couple moment to another spot on a rigid body: 
-<Image src='/Statics/ForceSystemsFigures/Equivalent_CoupleMove.PNG' width='5 '> </Image>
+<Image src='/Statics/ForceSystemsFigures/Equivalent_CoupleMove.png' width='5 '> </Image>
 
 </SubSubSection>
 
