--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -13,10 +13,11 @@ import BlueText from "../../components/BlueText.astro"
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#redundant_constraints'>Redundant Constraints</a></li>
       </ul>
       </div>
-<Section title="Reaction Forces" id="reaction_forces"></Section>
+<Section title="Reaction Forces" id="reaction_forces">
 
-Because of Newton's Third Law we know that every action has an equal and opposite reaction. We can solve for these reaction forces to understand the loading of a structure.  
-
+Because of Newton's Third Law we know that every action has an equal and opposite reaction. We can solve for these reaction forces to understand the loading of a structure.
+  
+</Section>
 <SubSection title="Types of Connections" id="types_of_connections">
 
 Different supports and different connections have different types of reaction forces depending on what they are constraining. For example, a pin connection restricts movement in the x-and y-directions but doesn't restrict rotation. This means that each pin connection has two reaction forces: one in the x-direciton, and one in the y-direction corresponding to the degrees of freedom that are fixed. 
