--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -24,7 +24,9 @@ Different supports and different connections have different types of reaction fo
 
 A roller support only constrains movement in the y-direction, and thus only has one reaction force (oriented in the y-direction). 
 
-<Image src='/Statics/ReactionForcesFigures/ReactionForces.jpg' width='8'>Common beam connections and subsequent reaction forces</Image>
+<Image src='/Statics/ReactionForcesFigures/SingleForceRxns.PNG' width='8'>Constraints that produce one unknown reaction force.</Image>
+
+<Image src='/Statics/ReactionForcesFigures/MultiForceRxns.PNG' width='8'>Constraints that produce multiple unknown reaction forces or moments.</Image>
 
 <!-- Should we make a table for here? Some good examples of rigid constraints in real life in lecture 15. -- >
 
