--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -13,6 +13,7 @@ const filename = 'Fig: ' + img_path_split.pop().replace('.png', '')
 
     .image-block{
         width: 100%;
+        background-color: white;
     }
 
     @media (min-width: 768px){
@@ -35,7 +36,7 @@ const filename = 'Fig: ' + img_path_split.pop().replace('.png', '')
 </style>
 
 <div class="img-container w-100 d-flex flex-column align-items-center my-3" id={id}>
-    <div class="d-flex flex-column align-items-center image-block">
+    <div class="d-flex flex-column align-items-center image-block p-1">
         <img src={src} class="w-100" alt={alt}>
     </div>
     <div class="d-flex flex-row justify-content-center align-items-baseline flex-wrap" style="gap: 5px;">
